--- a/com.allanchandy.auto-sync-zshrc.plist
+++ b/com.allanchandy.auto-sync-zshrc.plist
@@ -3,14 +3,14 @@
 <plist version="1.0">
     <dict>
         <key>Label</key>
-        <string>com.imbaggaarm.auto-sync-zshrc</string>
+        <string>com.allanchandy.auto-sync-zshrc</string>
         <key>ServiceDescription</key>
         <string>Auto sync zsh configs to git repository</string>
         <key>ProgramArguments</key>
         <array>
             <string>zsh</string>
             <string>-c</string>
-            <string>/Users/eastagile/code/zsh-backup/sync_zshrc.sh</string>
+            <string>/Users/allanchandy/code/zsh-backup/sync_zshrc.sh</string>
         </array>
         <key>StandardOutPath</key>
         <string>/Users/eastagile/tmp/com.imbaggaarm.sync-zshrc.stdout</string>
